--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="parallax-mirror"></div>
 	<div class="wrapper">
 		<div id="hd">
-			<h1 class="logo col-lg-5 col-md-6 col-sm-7 col-xs-7"><a href="index.html"><span>Felts</span> Idris</a></h1>
+			<h1 class="logo col-lg-5 col-md-6 col-sm-7 col-xs-7"><a href="/"><span>Feltz</span> Idris</a></h1>
 		</div>
 		<div class="container">
 			<header>
